# auto_fishing

./: Cargo.toml  Makefile
src/: app.rs  fishing.rs  indicator.rs  main.rs  style.css  tray.rs  window.rs
