[package]
name = "auto_fishing"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version="0.13.1", features=["tokio"]}
smart-default = "0.7.1"
tesseract = "0.15"
image = "0.25"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
gtk4 = {version="0.9.6", features=["v4_18"]}
gtk4-layer-shell = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = {version = "0.10.0", features= ["ksni"]}

[target.'cfg(target_os = "macos")'.dependencies]
tray-item = "0.10.0"
